enum-ptr-test/tests/fail/compact_copy.stderr
error[E0277]: the trait bound `Foo<'a, 'b>: std::marker::Copy` is not satisfied
 --> tests/fail/compact_copy.rs:5:10
  |
5 | #[derive(EnumPtr)]
  |          ^^^^^^^ the trait `std::marker::Copy` is not implemented for `Foo<'a, 'b>`
  |
note: required by a bound in `CompactCopy`
 --> $WORKSPACE/enum-ptr/src/compact_copy.rs
  |
  |     T: From<CompactCopy<T>> + Copy,
  |                               ^^^^ required by this bound in `CompactCopy`
  = note: this error originates in the derive macro `EnumPtr` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `Foo<'a, 'b>` with `#[derive(Copy)]`
  |
8 | #[derive(Copy)]
  |
